# lecture-ai-engineering

day1/02_streamlit_app/: app.py  config.py
day1/03_FastAPI/: app.py
day5/: pyproject.toml
day5/演習1/: main.py
day5/演習1/models/: titanic_model.pkl
day5/演習3/tests/: test_model.py
