[project]
name = "day5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "great-expectations>=1.4.4",
    "kedro>=0.19.12",
    "mlflow>=2.22.0",
    "pandas>=2.1.4",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
]
